# railoptim

./: .cursorrules  .gitignore  CHANGES_MASS_BATCH.md  Cargo.toml  README.md  auth-infisical.sh  example.py  request.json  response.json  run.sh  sample.json
data/: references.json  repairs.json
src/: api.rs  config.rs  debug.rs  hsolver.rs  main.rs  node.rs
src/data/: client.rs  demand.rs  dislocations.py  dislocations.rs  mod.rs  output.rs  references.rs  repairs.rs  supply.rs  tariffs.rs  wash.py  wash.rs
src/solver/: alns.rs  diagnose.rs  greedy.rs  lp.rs  mip.rs  mod.rs  model.rs  result.rs
